--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/geolocation": "^3.4.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.7.5",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
@@ -33,6 +37,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
@@ -47,6 +52,7 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.72.8",
     "@types/react-native-snap-carousel": "^3.8.11",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
