--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "ramda": "^0.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -45,8 +46,10 @@
     "react-native-circular-progress": "^1.4.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^3.9.1",
@@ -60,6 +63,8 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-html-to-pdf": "^0.8.3",
+    "@types/react-native-share": "^3.3.8",
     "@types/react-native-snap-carousel": "^3.8.11",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
