--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "my-app",
+    "name": "Grape AI",
     "slug": "grapeai",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/grapeai.png",
-    "scheme": "myapp",
+    "scheme": "GrapeAI",
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/images/grapeai.png",
@@ -13,7 +13,8 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.gowtham23s.grapeai"
     },
     "android": {
       "adaptiveIcon": {
