--- a/package.json
+++ b/package.json
@@ -30,14 +30,18 @@
     "axios": "^1.7.7",
     "expo": "~51.0.37",
     "expo-constants": "~16.0.2",
+    "expo-file-system": "^17.0.1",
     "expo-font": "~12.0.9",
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-location": "^17.0.1",
+    "expo-print": "^13.0.1",
     "expo-router": "~3.5.23",
+    "expo-sharing": "~12.0.1",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
+    "expo-task-manager": "~11.8.2",
     "expo-web-browser": "~13.0.3",
     "ramda": "^0.30.1",
     "react": "18.2.0",
@@ -57,9 +61,7 @@
     "react-native-svg": "15.2.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.10",
-    "expo-task-manager": "~11.8.2",
-    "expo-sharing": "~12.0.1"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
