--- a/app.json
+++ b/app.json
@@ -29,7 +29,8 @@
       "favicon": "./assets/images/grapeai.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
