--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "command": "npx expo start --android",
+      "command": "bun expo start",
       "name": "Expo- Tunnel",
       "request": "launch",
       "type": "node-terminal"
