--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.7.9",
     "expo": "^52.0.25",
     "expo-constants": "~17.0.4",
+    "expo-dev-client": "~5.0.9",
     "expo-doctor": "^1.12.5",
     "expo-file-system": "~18.0.7",
     "expo-font": "~13.0.3",
@@ -43,6 +44,7 @@
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.7",
     "expo-task-manager": "~12.0.4",
+    "expo-updates": "~0.26.12",
     "expo-web-browser": "~14.0.2",
     "metro": "^0.81.0",
     "metro-config": "^0.81.0",
