--- a/ios/GrapeAI/Info.plist
+++ b/ios/GrapeAI/Info.plist
@@ -27,7 +27,7 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>GrapeAI</string>
+          <string>grapeai</string>
           <string>com.gowtham23s.grapeai</string>
         </array>
       </dict>
