--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -173,4 +173,7 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+    implementation "androidx.credentials:credentials:<latest version>"
+    implementation "androidx.credentials:credentials-play-services-auth:<latest version>"
+    implementation "com.google.android.libraries.identity.googleid:googleid:<latest version>"
 }
