--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -173,7 +173,7 @@ dependencies {
     } else {
         implementation jscFlavor
     }
-    implementation "androidx.credentials:credentials:<latest version>"
-    implementation "androidx.credentials:credentials-play-services-auth:<latest version>"
-    implementation "com.google.android.libraries.identity.googleid:googleid:<latest version>"
+    implementation "androidx.credentials:credentials:1.5.0-rc01"
+    implementation "androidx.credentials:credentials-play-services-auth:1.5.0-rc01"
+    implementation "com.google.android.libraries.identity.googleid:googleid:1.1.1"
 }
